# _google_cloud_hello_world_fastapi_application

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  app.yaml  docker-compose.mongo.yml  docker-compose.tests_env.yml  env.github_actions.toml  env.toml  mongo_entrypoint.sh  prettier.config.js  pyproject.toml  pytest.ini
.github/workflows/: called-deploy-beforeCreate-cloud-function.yml  called-deploy-testing_m2m_via_google_signed_id_token-cloud-function.yml  called-deploy-to-app-engine.yml  called-deploy_hello_world_cloud_function.yml  called-run-tests.yml  deploy-to-app-engine.yml  deploy_to_app_engine.yml  on-pull-request.yml  on-push-test.yml  on_push_test.yml  run_tests.yml
app/api/: app.py  router.py
app/core/: lifespan.py  settings.py
app/tests/: conftest.py
cloud_functions/beforeCreate_tmp/: Makefile  index.js  package.json
cloud_functions/beforeSignin_tmp/: Makefile  index.js
cloud_functions/before_create_user/: index.js
cloud_functions/google_identity_beforeCreate/: index.js  package.json
cloud_functions/hello_world/: main.py
cloud_functions/testing_m2m_via_google_signed_id_token/: .gcloudignore  Makefile  index.js  package.json
fastapi_hello_world/: app.py
fastapi_hello_world/core/: lifespan.py  settings.py
fastapi_hello_world/tests/: conftest.py  pytest_beanie.py  pytest_env_variable.py
fastapi_hello_world/tmp_app/: routes.py
fastapi_hello_world/users/: models.py  repositories.py  routes.py  schemas.py
src/: main.py  models.py  routes.py  settings.py
src/tests/: conftest.py  pytest_beanie.py  (+1 more)
(+20 files in other folders)
