[tool.poetry]
name = "fastapi-hello-world"
version = "0.5.0"
description = ""
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
package-mode = false

[build-system]
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = { extras = ["standard"], version = "^0.115.2" }
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.0"
beanie = "^1.29.0"
jinja2 = "^3.1.6"
google-auth = "^2.40.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.9.6"
isort = "^5.13.1"
pre-commit = "^4.1.0"
ipython = "^9.2.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["E722", "B904", "B006", "B008"]
